--- a/MSService/index.html
+++ b/MSService/index.html
@@ -30,9 +30,13 @@
         </div>
     </div>
 
-    <div class="main">
-
-    </div>
+    <main class="main">
+        <section class="banner">
+            <div class="container">
+                <img class="back" src="images/backimg.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
