--- a/MSService/index.html
+++ b/MSService/index.html
@@ -34,6 +34,17 @@
         <section class="banner">
             <div class="container">
                 <img class="back" src="images/backimg.png" alt="">
+                <div class="content">
+                    <div class="top">
+                        <p class="text">Ремонт любой бытовой техники в Ульяновске</p>
+                        <img class="phone" src="images/iphone12pro.png" alt="">
+                    </div>
+
+                    <p class="comment">ТРАЛЯЛЯ</p>
+                    <a class="ostav" href="">
+                        <p>ОСТАВИТЬ ЗАЯВКУ НА РЕМОНТ</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
