--- a/MSService/index.html
+++ b/MSService/index.html
@@ -47,6 +47,105 @@
                 </div>
             </div>
         </section>
+
+        <section class="advantages">
+            <div class="container">
+                <h1 class="name">Наши преимущества</h1>
+                <div class="content">
+                    <div class="row">
+                        <div class="col-sm">
+                            <p class="img-svg"><img src="images/reliable.svg" alt=""></p>
+                            <h1 class="name-col">Надёжно</h1>
+                            <p class="content-col">Заказываем и используем только оффициальные запчасти от производителей</p>
+                        </div>
+                        <div class="col-sm">
+                            <p class="img-svg"><img src="images/fast.svg" alt=""></p>
+                            <h1 class="name-col">Быстро</h1>
+                            <p class="content-col">При мелких поломках ремонтируем вашу технику при вас</p>
+                        </div>
+                        <div class="col-sm">
+                            <p class="img-svg last-img"><img src="images/dollar.svg" alt=""></p>
+                            <h1 class="name-col">Недорого</h1>
+                            <p class="content-col">Первый осмотр вашей бытовой техники - бесплатно</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-us">
+            <div class="container">
+                <h1 class="name">Мы в цифрах</h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><span class="color">21</span><br>год работы</p>
+                        <p><span class="color">10 000 единиц</span><br>отремонтированной бытовой техники</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span class="color">1700+</span><br>довольных клиентов</p>
+                        <p><span class="color">12</span><br>месяцев гарантии на выполненую раюботу</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="partner">
+            <div class="container">
+                <h1 class="name">Наши партнёры</h1>
+                <div class="content row">
+                    <div class="col-md-3">
+                        <a href="">
+                            <p class="samsung">Samsung</p>
+                        </a>
+                        <a href="">
+                            <p class="redmond">REDMOND</p>
+                        </a>
+                        <a href="">
+                            <p class="gagenau">GAGENAU</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="">
+                            <p class="bosh">BOSCH</p>
+                        </a>
+                        <a href="">
+                            <p class="ericsson">ERICSSON</p>
+                        </a>
+                        <a href="">
+                            <p class="sony">SONY</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="">
+                            <p class="siemens">SIEMENS</p>
+                        </a>
+                        <a href="">
+                            <p class="telefunken">TELEFUNKEN</p>
+                        </a>
+                        <a href="">
+                            <p class="bbk">BBK</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="">
+                            <p class="zelmer">ZELMER</p>
+                        </a>
+                        <a href="">
+                            <p class="panasonic">Panasonic</p>
+                        </a>
+                        <a href="">
+                            <p class="neef">NEFF</p>
+                        </a>
+                    </div>
+                    <div class="col-md-12">
+                        <a href="">
+                            <p class="lg">LG</p>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
