--- a/MSService/index.html
+++ b/MSService/index.html
@@ -39,6 +39,9 @@
                 <div class="account">
                     <img class="img" src="images/user.svg" alt="">
                 </div>
+                <div class="login d-none">
+
+                </div>
                 <span class="border-line"></span>
             </div>
         </div>
